--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -25,7 +25,7 @@ services:
     ports:
       - "3306:3306"
     environment:
-      MYSQL_ROOT_PASSWORD: your_mysql_root_password
+      MYSQL_ROOT_PASSWORD: root
       MYSQL_DATABASE: your_database_name
       MYSQL_USER: your_database_user_name
       MYSQL_PASSWORD: your_database_user_password
